--- a/my_web/templates/my_web/botpage.html
+++ b/my_web/templates/my_web/botpage.html
@@ -1,19 +1,19 @@
 {% extends 'my_web/base.html' %}
 
 {% block title %}
-QWriter - Немного о боте
+AWARE Search - Немного о боте
 {% endblock %}
 
 {% block og_desc %}
-Сам этот сайт - всего лишь способ просмотреть ранее созданые записи. Эти записи создаются пользователями QWriter, Telegram бота, который является основой этого проекта. Сайт появился позже. Чтобы перейти к боту QWriter, щелкните по его имени.
+Удобная и красивая поисковая система
 {% endblock %}
 
 {% block twitter_desc %}
-Сам этот сайт - всего лишь способ просмотреть ранее созданые записи. Эти записи создаются пользователями QWriter, Telegram бота, который является основой этого проекта. Сайт появился позже. Чтобы перейти к боту QWriter, щелкните по его имени.
+Удобная и красивая поисковая система
 {% endblock %}
 
 {% block title_header %}
-QWriter
+AWARE
 {% endblock %}
 
 {% block url_path %}
@@ -25,12 +25,12 @@ QWriter
         <div class="col-12 col-lg-12 padding-block-center-box">
             <div class="user box aos-init aos-animate" data-aos="fade-up">
                 <div style="float: left; ">
-                    <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2"><i style="filter: invert(80%);" class="fas fa-circle"></i></label>
+
                     <label class="username">Бот QWriter в Telegram</label><br>
                     <label class="city">
                         Вы можете создавать собственные истории с помощью Telegram бота. Чтобы перейти к нему воспользуется <a href="https://t.me/QWriter_bot">этой ссылкой</a> или найдите его в поиске. (<a href="https://t.me/QWriter_bot">@QWriter_bot</a>)
                     </label><br>
-                    <a style="font-size: 12px;" href="{% url 'index_page' %}"><b>q-writer.com</b></a><br>
+                    <a style="font-size: 12px;" href="{% url 'index_page' %}"><b>awse.us</b></a><br>
                 </div>
             </div>
         </div>
