--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -8,7 +8,6 @@
         <div class="col-12 col-lg-12 padding-block-center-box">
             <div class="user box aos-init aos-animate" data-aos="fade-up">
                 <div style="float: left; ">
-                    <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2"><i style="filter: invert(80%);" class="fas fa-circle"></i></label>
                     <label class="username">Статистика COVID-19 в Украине</label><br>
                     <label class="city"><br/>
                         <!-- Body start -->
@@ -20,7 +19,7 @@
                         <h6>📅<b>{{ covid_ua.5 }}</b></h6>
                         <!-- Body finish -->
                         <br/></label><br/>
-                        <a style="font-size: 12px;" href="{% url 'index_page' %}"><b>q-writer.com</b></a><br>
+                        <a style="font-size: 12px;" href="{% url 'index_page' %}"><b>awse.us</b></a><br>
                 </div>
             </div>
         </div>
@@ -29,7 +28,6 @@
         <div class="col-12 col-lg-12 padding-block-center-box">
             <div class="user box aos-init aos-animate" data-aos="fade-up">
                 <div style="float: left; ">
-                    <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2"><i style="filter: invert(80%);" class="fas fa-circle"></i></label>
                     <label class="username">Статистика COVID-19 в России</label><br>
                     <label class="city"><br/>
                         <!-- Body start -->
@@ -41,47 +39,45 @@
                         <h6>📅<b>{{ covid_ru.5 }}</b></h6>
                         <!-- Body finish -->
                         <br/></label><br/>
-                        <a style="font-size: 12px;" href="{% url 'index_page' %}"><b>q-writer.com</b></a><br>
+                        <a style="font-size: 12px;" href="{% url 'index_page' %}"><b>awse.us</b></a><br>
                 </div>
             </div>
         </div>
     {% endif %}
 {% endif %}
 
+{% if c_result %}
+    <div class="col-12 col-lg-12 padding-block-center-box">
+        <div class="user box aos-init aos-animate" data-aos="fade-up">
+            <div style="float: left;">
+                <label class="username">Калькулятор</label><br>
+                <label class="city"><i>{{ c_input }}&nbsp;=&nbsp;{{ c_result }}</i></label><br>
+                <a style="font-size: 12px;" href="{% url 'index_page' %}"><b>awse.us</b></a><br>
+            </div>
+        </div>
+    </div>
+{% endif %}
+{% if news_search_in_str %}
+    <div class="col-12 col-lg-12 padding-block-center-box">
+        <div class="user box aos-init aos-animate" data-aos="fade-up">
+            <div style="float: left;">
+                <label class="username"><a href="{% url 'news_page' %}">Новости от AWARE</a></label><br>
+                <label class="city"><i>Подборка новостей на сегодня от AWARE</i></label><br>
+                <br/><a style="font-size: 12px;" href="{% url 'index_page' %}"><b>awse.us</b></a><br>
+            </div>
+        </div>
+    </div>
+{% endif %}
+
 {% for el in data %}
     {% if additions %}
-        {% if 100|get_randint > 30 %}
-            <div class="col-12 col-lg-12 padding-block-center-box">
-                <div class="user box aos-init aos-animate" data-aos="fade-up">
-                    <div style="float: left;">
-                        <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2"><i style="filter: invert(80%);" class="fas fa-circle"></i></label>
-                        <label class="username">Пользовательская запись</label><br>
-                        <label class="city">{{ el.0.0|safe }}<br/></b><i><u>Опубликовано {{ el.0.1 }} (UTC)</u></i></label><br>
-                        <a style="font-size: 12px;" href="{% url 'storyaddr' %}{{ el.0.3 }}"><b>q-writer.com</b></a><br>
-                    </div>
-                </div>
-            </div>
-        {% endif %}
-        {% if 100|get_randint > 90 %}
-            <div class="col-12 col-lg-12 padding-block-center-box">
-                <div class="user box aos-init aos-animate" data-aos="fade-up">
-                    <div style="float: left;">
-                        <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2"><i style="filter: invert(80%);" class="fas fa-circle"></i></label>
-                        <label class="username">Пользовательская запись</label><br>
-                        <label class="city"><i title="Текст который написал пользователь">{{ el.1.user_text }}</i><b title="Текст который написал бот">{{ el.1.bot_text }}</b><br/><br/><i><u>Опубликовано {{ el.1.time_field }} (UTC)</u></i></label><br>
-                        <a style="font-size: 12px;" href="{% url 'postaddr' %}{{ el.1.unique_id }}"><b>q-writer.com</b></a><br>
-                    </div>
-                </div>
-            </div>
-        {% endif %}
         {% if 100|get_randint > 70 %}
             <div class="col-12 col-lg-12 padding-block-center-box">
                 <div class="user box aos-init aos-animate" data-aos="fade-up">
                     <div style="float: left;">
-                        <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2"><i style="filter: invert(80%);" class="fas fa-circle"></i></label>
                         <label class="username">Случайная цитата</label><br>
-                        <label class="city"><i>„{{ el.2.q_text }}“</i><br><br><b>{{ el.2.q_author }}</b></label><br>
-                        <a style="font-size: 12px;" href="{% url 'quoteaddr' %}{{ el.2.unique_id }}"><b>q-writer.com</b></a><br>
+                        <label class="city"><i>„{{ el.0.q_text }}“</i><br><br><b>{{ el.0.q_author }}</b></label><br>
+                        <a style="font-size: 12px;" href="{% url 'quoteaddr' %}{{ el.0.unique_id }}"><b>awse.us</b></a><br>
                     </div>
                 </div>
             </div>
@@ -90,34 +86,46 @@
             <div class="col-12 col-lg-12 padding-block-center-box">
                 <div class="user box aos-init aos-animate" data-aos="fade-up">
                     <div style="float: left;">
-                        <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2"><i style="filter: invert(80%);" class="fas fa-circle"></i></label>
                         <label class="username">Случайный факт</label><br>
-                        <label class="city"><i>{{ el.3.f_text }}</i><br></label><br><br>
-                        <a style="font-size: 12px;" href="{% url 'factaddr' %}{{ el.3.unique_id }}"><b>q-writer.com</b></a><br>
+                        <label class="city"><i>{{ el.1.f_text }}</i><br></label><br><br>
+                        <a style="font-size: 12px;" href="{% url 'factaddr' %}{{ el.1.unique_id }}"><b>awse.us</b></a><br>
                     </div>
                 </div>
             </div>
         {% endif %}
     {% endif %}
     {% if 100|get_randint > 80 or not additions and news_append %}
-        {% if el.4.0 %}
+        {% if el.2.0 %}
             <div class="col-12 col-lg-12 padding-block-center-box">
                 <div class="user box aos-init aos-animate" data-aos="fade-up">
                     <div style="float: left;">
-                        <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2"><i style="filter: invert(80%);" class="fas fa-circle"></i></label>
-                        <label class="username">Случайная новость</label><br>
+                        <label class="username">{{ el.2.0 }}</label><br>
                         <label class="city">
                             {# paste news image #}
-                            {% if el.4.5 %}
-                                <img src="{% url 'imageproxy' %}?data={{ el.4.5|link_encrypt_img }}&token={{ token_image_proxy }}" class="photohub_item" onerror="imgError(this);" style="width:100%;margin-top: 3%;" alt="Обложка новостного блока">
+                            {% if el.2.5 %}
+                                <img src="{% url 'imageproxy' %}?data={{ el.2.5|link_encrypt_img }}&token={{ token_image_proxy }}" class="photohub_item" onerror="imgError(this);" style="width:100%;margin-top: 3%;" alt="Обложка новостного блока">
                             {% endif %}
-                            <b style="font-size: 14px">{{ el.4.0 }}</b><br/><i>{{ el.4.1 }}</i><br><br><b>Источник - <a href="{{ el.4.4 }}">{{ el.4.2 }}</a></b><br><i><u>Опубликовано {{ el.4.3 }} (UTC)</u></i>
+                            <i>{{ el.2.1 }}</i><br><br><b>Источник - <a href="{{ el.2.4 }}">{{ el.2.2 }}</a></b><br><i><u>Опубликовано {{ el.2.3 }} (UTC)</u></i>
                         </label><br><br>
-                        <a style="font-size: 12px;" href="{% url 'index_page' %}"><b>q-writer.com</b></a><br>
+                        <a style="font-size: 12px;" href="{% url 'index_page' %}"><b>awse.us</b></a><br>
                     </div>
                 </div>
             </div>
         {% endif %}
+    {% endif %}
+    {% if el.3.title %}
+        <div class="col-12 col-lg-12 padding-block-center-box">
+            <div class="user box aos-init aos-animate" data-aos="fade-up">
+                <div style="float: left;">
+                    <label class="username"><a target="_blank" href="{{ el.3.link }}">{{ el.3.title }}</a></label><br>
+                    <label class="city">
+                        <p>{{ el.3.displayLink }}</p>
+                        <i>{{ el.3.snippet }}</i>
+                    </label><br>
+                    <br/><a style="font-size: 12px;" href="{% url 'index_page' %}"><b>awse.us</b></a><br>
+                </div>
+            </div>
+        </div>
     {% endif %}
 {% endfor %}
 
