--- a/my_web/templates/my_web/quoteview.html
+++ b/my_web/templates/my_web/quoteview.html
@@ -1,11 +1,11 @@
 {% extends 'my_web/base.html' %}
 
 {% block title %}
-QWriter - Случайная цитата
+AWARE Search - Случайная цитата
 {% endblock %}
 
 {% block title_header %}
-QWriter
+AWARE Search
 {% endblock %}
 
 {% block og_desc %}
@@ -25,10 +25,9 @@ QWriter
     <div class="col-12 col-lg-12 padding-block-center-box">
         <div class="user box aos-init aos-animate" data-aos="fade-up">
             <div style="float: left; ">
-                <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2"><i style="filter: invert(80%);" class="fas fa-circle"></i></label>
                 <label class="username">Случайная цитата</label><br>
                 <label class="city qwriter-content-block"><i>„{{ quoteget.q_text }}“</i><br><br><b>{{ quoteget.q_author }}</b></label><br>
-                <a style="font-size: 12px;" href="{% url 'index_page' %}"><b>q-writer.com</b></a><br>
+                <a style="font-size: 12px;" href="{% url 'index_page' %}"><b>awse.us</b></a><br>
             </div>
         </div>
     </div>
