--- a/my_web/static/my_web/css/main_page.css
+++ b/my_web/static/my_web/css/main_page.css
@@ -8,7 +8,21 @@
         font-family: 'Open Sans', sans-serif;
         fill: #000000;
         font-size: 16px;
-        background: #202124;
+        background: linear-gradient(90deg, #000, #777777, #777777, #000);
+        background-size: 400% 400%;
+        animation: gradient 15s ease infinite;
+    }
+
+    @keyframes gradient {
+        0% {
+            background-position: 0% 50%;
+        }
+        50% {
+            background-position: 100% 50%;
+        }
+        100% {
+            background-position: 0% 50%;
+        }
     }
 
     a {
