--- a/my_web/templates/my_web/awareview.html
+++ b/my_web/templates/my_web/awareview.html
@@ -1,11 +1,11 @@
 {% extends 'my_web/base.html' %}
 
 {% block title %}
-QWriter - AWARE Page
+AWARE Search - AWARE Page
 {% endblock %}
 
 {% block title_header %}
-QWriter
+AWARE
 {% endblock %}
 
 {% block url_path %}
@@ -30,7 +30,7 @@ QWriter
                     {{ aware.page_html_code|safe }}<br/>
                     <p>Эта страница сгенерирована специально для Telegram бота AWARE</p>
                     <br></label><br><br>
-                <a style="font-size: 12px;" href="{% url 'index_page' %}"><b>q-writer.com</b></a><br>
+                <a style="font-size: 12px;" href="{% url 'index_page' %}"><b>awse.us</b></a><br>
             </div>
         </div>
     </div>
