--- a/my_web/templates/my_web/error.html
+++ b/my_web/templates/my_web/error.html
@@ -1,7 +1,7 @@
 {% extends 'my_web/base.html' %}
 
 {% block title %}
-QWriter - Что-то пошло не так... Сервер сломался наверное...
+AWARE Search - Что-то пошло не так... Сервер сломался наверное...
 {% endblock %}
 
 {% block og_desc %}
@@ -13,7 +13,7 @@ QWriter - Что-то пошло не так... Сервер сломался н
 {% endblock %}
 
 {% block title_header %}
-QWriter
+AWARE
 {% endblock %}
 
 {% block content %}
@@ -21,10 +21,9 @@ QWriter
         <div class="col-12 col-lg-12 padding-block-center-box">
             <div class="user box aos-init aos-animate" data-aos="fade-up">
                 <div style="float: left; ">
-                    <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2"><i style="filter: invert(80%);" class="fas fa-circle"></i></label>
                     <label class="username">Очень креативная запись</label><br>
                     <label class="city"><i title="Текст который написал не пользователь и не бот">Извини, запись не удалось получить, наверное это ошибка сервера, ну или твоя. Проверь пожалуйста адрес страницы. Информация о ошибке: </i><b>{{ exception }}</b><br><i><u>Опубликовано Сейчас (UTC)</u></i></label><br>
-                    <a style="font-size: 12px;" href="{% url 'index_page' %}"><b>q-writer.com</b></a><br>
+                    <a style="font-size: 12px;" href="{% url 'index_page' %}"><b>awse.us</b></a><br>
                 </div>
             </div>
         </div>
