--- a/my_web/templates/my_web/factview.html
+++ b/my_web/templates/my_web/factview.html
@@ -1,11 +1,11 @@
 {% extends 'my_web/base.html' %}
 
 {% block title %}
-QWriter - Случайный факт
+AWARE Search - Случайный факт
 {% endblock %}
 
 {% block title_header %}
-QWriter
+AWARE Search
 {% endblock %}
 
 {% block url_path %}
@@ -25,10 +25,9 @@ QWriter
     <div class="col-12 col-lg-12 padding-block-center-box">
         <div class="user box aos-init aos-animate" data-aos="fade-up">
             <div style="float: left; ">
-                <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2"><i style="filter: invert(80%);" class="fas fa-circle"></i></label>
                 <label class="username">Случайный факт</label><br>
                 <label class="city qwriter-content-block"><i>{{ factget.f_text }}</i><br></label><br><br>
-                <a style="font-size: 12px;" href="{% url 'index_page' %}"><b>q-writer.com</b></a><br>
+                <a style="font-size: 12px;" href="{% url 'index_page' %}"><b>awse.us</b></a><br>
             </div>
         </div>
     </div>
