--- a/my_web/templates/my_web/index.html
+++ b/my_web/templates/my_web/index.html
@@ -1,19 +1,19 @@
 {% extends 'my_web/base.html' %}
 
 {% block title %}
-QWriter - Главная страница
+AWARE Search - Поиск
 {% endblock %}
 
 {% block title_header %}
-QWriter
+AWARE Search
 {% endblock %}
 
 {% block og_desc %}
-Сайт, который не ограничивает твою фантазию. Придумывай истории и делись ними со всеми. Здесь нет цензуры и ограничений.
+Удобная и красивая поисковая система
 {% endblock %}
 
 {% block twitter_desc %}
-Сайт, который не ограничивает твою фантазию. Придумывай истории и делись ними со всеми. Здесь нет цензуры и ограничений.
+Удобная и красивая поисковая система
 {% endblock %}
 
 {% block public_re %}
@@ -22,26 +22,240 @@ QWriter
 
 {% block content %}
 {% load static %}
-    <div class="col-12 col-lg-12 padding-block-center-box">
-        <div class="user box aos-init aos-animate" data-aos="fade-up">
-            <img style="image-rendering: pixelated; filter: invert(80%); width: 60px; height: 60px" class="lazyloaded" data-src="{% static 'my_web/images/logo-dark.svg' %}" src="{% static 'my_web/images/logo-dark.svg' %}">
-            <div style="width: calc(100% - 90px); float: left; ">
-                <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2"><i style="filter: invert(80%);" class="fas fa-circle"></i></label>
-                <label class="username">Информация</label><br>
-                <label class="city">
-                    <b>Для связи с разработчиком используйте <a href="https://t.me/koval_yaroslav">Telegram</a> или <a href="mailto:koval@q-writer.com">электронный адрес</a>. This site uses <a href="https://www.google.com/recaptcha">Google ReCaptcha</a> technology.</b>
-                    <br/></label><br/>
-                    <a style="font-size: 12px;" href="{% url 'index_page' %}"><b>q-writer.com</b></a><br>
-            </div>
+    <div style="display: block;margin-left: auto;margin-right: auto;border-radius: 20%;">
+        <div class="search-aware-block-global">
+            <input type="text" maxlength="3000" class="search-input-aware" size="70" placeholder="{{ search_template }}" style="
+                width: 65%;
+                border-radius: 15px;
+                background: #202124;
+                color: #dedede;
+                margin: 17%;
+                border-color: #bbbbbb;
+            ">
         </div>
+        <div class="search-aware-button-one">
+            <button style="margin:15px auto;display:block;background-color:#121213;margin-top: -15%;" class="btn btn-dark load-more-end-butt">Поиск&nbsp;<span class="spinner-border spinner-border-sm" aria-hidden="true"></span></button>
+        </div>
+        <div class="row-posts-end">
+            {% for el in add_ %}
+                {% if 100|get_randint > 50 %}
+                    <div class="col-12 col-lg-12 padding-block-center-box">
+                        <div class="user box aos-init aos-animate" data-aos="fade-up">
+                            <div style="float: left;">
+                                <label class="username">Случайная цитата</label><br>
+                                <label class="city"><i>„{{ el.0.q_text }}“</i><br><br><b>{{ el.0.q_author }}</b></label><br>
+                                <a style="font-size: 12px;" href="{% url 'quoteaddr' %}{{ el.0.unique_id }}"><b>awse.us</b></a><br>
+                            </div>
+                        </div>
+                    </div>
+                {% else %}
+                    <div class="col-12 col-lg-12 padding-block-center-box">
+                        <div class="user box aos-init aos-animate" data-aos="fade-up">
+                            <div style="float: left;">
+                                <label class="username">Случайный факт</label><br>
+                                <label class="city"><i>{{ el.1.f_text }}</i><br></label><br><br>
+                                <a style="font-size: 12px;" href="{% url 'factaddr' %}{{ el.1.unique_id }}"><b>awse.us</b></a><br>
+                            </div>
+                        </div>
+                    </div>
+                {% endif %}
+            {% endfor %}
+        </div>
+        <div style="margin: auto;">
+            <p class="no-more-results-text" style="color: #828282;font-size: 14px;visibility: hidden;text-align: center;">Больше результатов нет</p>
+        </div>
+        <button style="margin:0 auto;display:block;background-color:#121213;visibility: hidden;margin-bottom: 5%;" class="btn btn-dark load-more-end-butt-search-array">Загрузить еще&nbsp;<span class="spinner-border spinner-border-sm" aria-hidden="true"></span></button>
     </div>
-    <div class="row-posts-end"></div><br><button style="margin:0 auto;display:block;background-color:#121213;" class="btn btn-dark load-more-end-butt">Загрузить еще&nbsp;<span class="spinner-border spinner-border-sm" aria-hidden="true"></span></button>
 {% endblock %}
 
 {% block js_module %}
     {% csrf_token %}
     <script type="text/javascript">
-        if(window.location.search<2){function imgError(o){return o.onerror="",o.src="{% static 'my_web/images/background.png' %}",!0}function load_ajax_end_page(o){const e=$(".load-more-end-butt"),n=e.find("span");var t=jQuery("[name=csrfmiddlewaretoken]").val();grecaptcha.ready(function(){grecaptcha.execute("{{ token_re }}",{action:"submit"}).then(function(i){var a=i;$.ajax({url:"{% url 'load_more' %}",type:"POST",data:{csrfmiddlewaretoken:t,validtoken:"{{ token_valid }}",typeload:o,additions:1,news:0,gr_token:a,covid_stat:0},beforeSend:function(){e.attr("disabled",!0),n.addClass("d-inline-block"),AOS.init()},success:function(o){e.attr("disabled",!1),n.removeClass("d-inline-block"),"Ошибка валидации!"==o?alert("Ошибка. Не удалось подтвердить запрос. Перезагрузите страницу."):$(".row-posts-end").before(o),AOS.init(),$(document).ready(function(){$('[data-toggle="tooltip"]').tooltip()})},error:function(){alert("Ошибка. Не удалось получить ответ от сервера. Попробуйте перезагрузить страницу."),e.attr("disabled",!1),n.removeClass("d-inline-block")}})})})}function onMenuClicked(){$(".menu_box").is(":hidden")?($(".menu_box").show(),$(".float_bg").show()):($(".menu_box").hide(),$(".float_bg").hide())}$(window).scroll(function(){$(window).scrollTop()==$(document).height()-$(window).height()&&setTimeout(function(){$(window).scrollTop()==$(document).height()-$(window).height()&&load_ajax_end_page("sessioncontinue")},100)}),$(document).ready(function(){load_ajax_end_page("newsession")}),$(".load-more-end-butt").on("click",function(){load_ajax_end_page("sessioncontinue")}),AOS.init(),$(document).ready(function(){$('[data-toggle="tooltip"]').tooltip()}),$("a.scroll-to").on("click",function(o){o.preventDefault();var e=$(this).attr("href");$("html, body").stop().animate({scrollTop:$(e).offset().top-60},900)}),$(window).scroll(function(){home_button=document.getElementById("h_butt"),1e3<$(window).scrollTop()?home_button.style.visibility="visible":home_button.style.visibility="hidden"}),$(document).on("click",function(o){$(o.target).hasClass("float_bg")&&($(".menu_box").hide(),$(".float_bg").hide())})}else{function onMenuClicked(){$(".menu_box").is(":hidden")?($(".menu_box").show(),$(".float_bg").show()):($(".menu_box").hide(),$(".float_bg").hide())}$(document).on("click",function(o){$(o.target).hasClass("float_bg")&&($(".menu_box").hide(),$(".float_bg").hide())})}
+        function imgError(o) {
+            return (o.onerror = ""), (o.src = "{% static 'my_web/images/background.png' %}"), !0;
+        }
+        function throttle(func, ms) {
+
+            let isThrottled = false,
+              savedArgs,
+              savedThis;
+
+            function wrapper() {
+
+              if (isThrottled) {
+                savedArgs = arguments;
+                savedThis = this;
+                return;
+              }
+
+              func.apply(this, arguments);
+
+              isThrottled = true;
+
+              setTimeout(function() {
+                isThrottled = false;
+                if (savedArgs) {
+                  wrapper.apply(savedThis, savedArgs);
+                  savedArgs = savedThis = null;
+                }
+              }, ms);
+            }
+
+            return wrapper;
+          }
+        var search_index = 0;
+        var error_block_space_design = '<div class="col-12 col-lg-12 padding-block-center-box"><div class="user box aos-init aos-animate" data-aos="fade-up"><div style="float: left;"><label class="username ml11"><span class="text-wrapper"><span class="line line1"></span><span class="letters">Прости но мы не смогли ничего найти по твоему запросу...</span></span></label><br><label class="city"></label><br><br><a style="font-size: 12px;" href="{% url "index_page" %}"><b>awse.us</b></a><br></div></div></div>';
+        function load_ajax_end_page(o, type_loading) {
+            const text_no = $(".no-more-results-text");
+            const e = $(".load-more-end-butt"),
+                n = e.find("span");
+            const load_continue_footer = $(".load-more-end-butt-search-array"),
+                n_con = load_continue_footer.find("span");
+            var t = jQuery("[name=csrfmiddlewaretoken]").val();
+            grecaptcha.ready(function () {
+                grecaptcha.execute("{{ token_re }}", { action: "submit" }).then(function (i) {
+                    var a = i;
+                    $.ajax({
+                        url: "{% url 'load_more' %}",
+                        type: "POST",
+                        data: { csrfmiddlewaretoken: t, validtoken: "{{ token_valid }}", typeload: type_loading, additions: 0, news: 0, gr_token: a, covid_stat: 0, search: o},
+                        beforeSend: function () {
+                            text_no.css('visibility', 'hidden'), e.attr("disabled", !0), n.addClass("d-inline-block"), AOS.init();
+                        },
+                        success: function (o) {
+                            load_continue_footer.css('visibility', 'visible');
+                            if (o.replace(/[^+\w]/g, '').length < 10) {
+                                load_continue_footer.css('visibility', 'hidden');
+                            }
+                            n_con.css('visibility', 'hidden');
+                            n_con.removeClass("d-inline-block");
+                            if (type_loading == 'newsession') {
+                                $(".row-posts-end").empty();
+                                search_index = 21;
+                            }
+                            e.attr("disabled", !1),
+                                n.removeClass("d-inline-block"),
+                                "Ошибка валидации!" == o ? alert("Ошибка. Не удалось подтвердить запрос. Перезагрузите страницу.") : $(".row-posts-end").append(o),
+                                AOS.init(),
+                                $(document).ready(function () {
+                                    $('[data-toggle="tooltip"]').tooltip();
+                                });
+                        },
+                        error: function () {
+                            $(".row-posts-end").empty(), $(".row-posts-end").append(error_block_space_design), e.attr("disabled", !1), n.removeClass("d-inline-block");
+                        },
+                    });
+                });
+            });
+        }
+        function load_continue_ajax_end_page(o, type_loading) {
+            const text_no = $(".no-more-results-text");
+            const e = $(".load-more-end-butt-search-array"),
+                n = e.find("span");
+            var t = jQuery("[name=csrfmiddlewaretoken]").val();
+            grecaptcha.ready(function () {
+                grecaptcha.execute("{{ token_re }}", { action: "submit" }).then(function (i) {
+                    var a = i;
+                    $.ajax({
+                        url: "{% url 'load_more' %}",
+                        type: "POST",
+                        data: { csrfmiddlewaretoken: t, validtoken: "{{ token_valid }}", typeload: type_loading, additions: 0, news: 0, gr_token: a, covid_stat: 0, search: o, search_index_: search_index},
+                        beforeSend: function () {
+                            text_no.css('visibility', 'hidden'), e.attr("disabled", !0), n.addClass("d-inline-block"), n.css('visibility', 'visible'), AOS.init();
+                        },
+                        success: function (o) {
+                            n.css('visibility', 'hidden');
+                            search_index = search_index + 10;
+                            if (search_index > 100) {
+                                e.css('visibility', 'hidden');
+                                text_no.css('visibility', 'visible');
+                            }
+                            e.attr("disabled", !1),
+                                n.removeClass("d-inline-block"),
+                                "Ошибка валидации!" == o ? alert("Ошибка. Не удалось подтвердить запрос. Перезагрузите страницу.") : $(".row-posts-end").append(o),
+                                AOS.init(),
+                                $(document).ready(function () {
+                                    $('[data-toggle="tooltip"]').tooltip();
+                                });
+                        },
+                        error: function () {
+                            e.css('visibility', 'hidden'), e.attr("disabled", !1), n.css('visibility', 'hidden'), n.removeClass("d-inline-block"), text_no.css('visibility', 'visible');
+                        },
+                    });
+                });
+            });
+        }
+        function onMenuClicked() {
+            $(".menu_box").is(":hidden") ? ($(".menu_box").show(), $(".float_bg").show()) : ($(".menu_box").hide(), $(".float_bg").hide());
+        }
+        function get_suggestions() {
+            grecaptcha.ready(function () {
+                grecaptcha.execute("{{ token_re }}", { action: "submit" }).then(function (i) {
+                    $.ajax({
+                        url: "./suggestions",
+                        type: "GET",
+                        data: {"q": $('.search-input-aware').val(), 'gr_token': i},
+                    }).done(function() {
+                    });
+                });
+            });
+        }
+        $(".search-input-aware").on('keyup', function (e) {
+            if (e.key === 'Enter' || e.keyCode === 13) {
+                var search_text = $('.search-input-aware').val();
+                if (search_text.length == 0) {
+                    search_text = "{{ search_template }}";
+                }
+                load_ajax_end_page(search_text, 'newsession');
+            }
+        });
+        $('.search-input-aware').on('input', function() {
+            var search_text = $('.search-input-aware').val();
+            if (search_text.length == 0) {
+                get_suggestions(search_text);
+            }
+            else {
+                let throttle_get_suggestions = throttle(get_suggestions, 650);
+                throttle_get_suggestions(search_text);
+            }
+        });
+        $(".load-more-end-butt").on("click", function() {
+            var search_text = $('.search-input-aware').val();
+            if (search_text.length == 0) {
+                search_text = "{{ search_template }}";
+            }
+            load_ajax_end_page(search_text, 'newsession');
+        });
+        $(".load-more-end-butt-search-array").on("click", function() {
+            var search_text = $('.search-input-aware').val();
+            if (search_text.length == 0) {
+                search_text = "{{ search_template }}";
+            }
+            load_continue_ajax_end_page(search_text, search_index);
+        });
+        $(window).scroll(function () {
+            $(window).scrollTop() == $(document).height() - $(window).height() &&
+                setTimeout(function () {
+                    $(window).scrollTop() == $(document).height() - $(window).height();
+                }, 100);
+        }),
+            AOS.init(),
+            $(document).ready(function () {
+                $('[data-toggle="tooltip"]').tooltip();
+            }),
+            $("a.scroll-to").on("click", function (o) {
+                o.preventDefault();
+                var e = $(this).attr("href");
+                $("html, body")
+                    .stop()
+                    .animate({ scrollTop: $(e).offset().top - 60 }, 900);
+            }),
+            $(window).scroll(function () {
+                (home_button = document.getElementById("h_butt")), 1e3 < $(window).scrollTop() ? (home_button.style.visibility = "visible") : (home_button.style.visibility = "hidden");
+            }),
+            $(document).on("click", function (o) {
+                $(o.target).hasClass("float_bg") && ($(".menu_box").hide(), $(".float_bg").hide());
+            });
     </script>
 {% endblock %}
 
