--- a/my_web/templates/my_web/status.html
+++ b/my_web/templates/my_web/status.html
@@ -1,11 +1,11 @@
 {% extends 'my_web/base.html' %}
 
 {% block title %}
-QWriter - Статус и история доступности QWriter
+AWARE Search - Статус и история доступности QWriter
 {% endblock %}
 
 {% block title_header %}
-QWriter
+AWARE
 {% endblock %}
 
 {% block og_desc %}
@@ -25,7 +25,7 @@ QWriter
         <div class="col-12 col-lg-12 padding-block-center-box">
             <div class="user box aos-init aos-animate" data-aos="fade-up">
                 <div style="float: left; ">
-                    <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2"><i style="filter: invert(80%);" class="fas fa-circle"></i></label>
+
                     <label class="username">Доступность QWriter</label><br>
                     <label class="city">
                         <i>За последние сутки: <b>{{ status.days1 }}%</b></i><br/>
@@ -40,7 +40,7 @@ QWriter
                             {{ status.logs.1.reason.detail.short }}
                         </b></i><br/>
                     </label><br/>
-                    <a style="font-size: 12px;" href="{% url 'index_page' %}"><b>q-writer.com</b></a><br>
+                    <a style="font-size: 12px;" href="{% url 'index_page' %}"><b>awse.us</b></a><br>
                 </div>
             </div>
         </div>
