--- a/my_web/templates/my_web/index.html
+++ b/my_web/templates/my_web/index.html
@@ -43,7 +43,7 @@ AWARE Search
                         <div style="float: left;">
                             <label class="username">Случайный факт</label><br>
                             <label class="city"><i>{{ add_.text }}</i><br></label><br><br>
-                            <a style="font-size: 12px;" href="{% url 'factaddr' %}{{ el.1.unique_id }}"><b>awse.us</b></a><br>
+                            <a style="font-size: 12px;" href="{% url 'index_page' %}"><b>awse.us</b></a><br>
                         </div>
                     </div>
                 </div>
@@ -53,7 +53,7 @@ AWARE Search
                         <div style="float: left;">
                             <label class="username">Случайная цитата</label><br>
                             <label class="city"><i>„{{ add_.text }}“</i><br><br><b>{{ add_.author }}</b></label><br>
-                            <a style="font-size: 12px;" href="{% url 'quoteaddr' %}{{ el.0.unique_id }}"><b>awse.us</b></a><br>
+                            <a style="font-size: 12px;" href="{% url 'index_page' %}"><b>awse.us</b></a><br>
                         </div>
                     </div>
                 </div>
