--- a/my_web/templates/my_web/botpage.html
+++ b/my_web/templates/my_web/botpage.html
@@ -26,9 +26,9 @@ AWARE
             <div class="user box aos-init aos-animate" data-aos="fade-up">
                 <div style="float: left; ">
 
-                    <label class="username">Бот QWriter в Telegram</label><br>
+                    <label class="username">Бот AWARE в Telegram</label><br>
                     <label class="city">
-                        Вы можете создавать собственные истории с помощью Telegram бота. Чтобы перейти к нему воспользуется <a href="https://t.me/QWriter_bot">этой ссылкой</a> или найдите его в поиске. (<a href="https://t.me/QWriter_bot">@QWriter_bot</a>)
+                        Удобная поисковая система прямо в Telegram. Чтобы перейти к бота - нажмите на его псевдоним <a href="https://t.me/AwareSearchBot">@AwareSearchBot</a>.
                     </label><br>
                     <a style="font-size: 12px;" href="{% url 'index_page' %}"><b>awse.us</b></a><br>
                 </div>
