--- a/my_web/templates/my_web/botpage.html
+++ b/my_web/templates/my_web/botpage.html
@@ -28,7 +28,7 @@ AWARE
 
                     <label class="username">Бот AWARE в Telegram</label><br>
                     <label class="city">
-                        Удобная поисковая система прямо в Telegram. Чтобы перейти к бота - нажмите на его псевдоним <a href="https://t.me/AwareSearchBot">@AwareSearchBot</a>.
+                        Удобная поисковая система прямо в Telegram. Чтобы перейти к боту - нажмите на его псевдоним <a href="https://t.me/AwareSearchBot">@AwareSearchBot</a>.
                     </label><br>
                     <a style="font-size: 12px;" href="{% url 'index_page' %}"><b>awse.us</b></a><br>
                 </div>
